--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,10 @@
 body {
-    background: #000;
+    margin: 0;
+    padding: 0;
+    background: url(../img/fondo.jpg) no-repeat center top;
+    background-size: cover;
+    font-family: sans-serif;
+    height: 100vh;
+
 }
+
