--- a/css/master.css
+++ b/css/master.css
@@ -21,3 +21,10 @@ body {
     padding: 70px 30px;
 
 }
+
+.login-contenedor .avatar {
+
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
