--- a/css/menu.css
+++ b/css/menu.css
@@ -26,5 +26,32 @@ body {
     text-decoration: none;
     padding: 10px 15px;
     display: block;
-    
+
+}
+
+.nav li a:hover{
+    background-color: #706d6d;
+}
+
+.nav > li {
+    float: left;
+}
+
+.nav li ul{
+    display: none;
+    position:absolute;
+    min-width: 140px;
+}
+
+.nav li:hover > ul {
+    display:block;
+}
+
+.nav li ul li{
+    position: relative;
+}
+
+.nav li ul li ul{
+    right: -140px;
+    top: 0px;
 }
