--- a/css/menu.css
+++ b/css/menu.css
@@ -1,52 +1,49 @@
-*{
-    margin:0;
-    padding:0;
-} 
-
-.menu {
-
-    margin: auto;
-    width: 500px;
-    font-family: Arial, Arial, Helvetica, sans-serif;
+* {
+    margin:0px;
+    padding:0px;
 }
 
-.ul, ol{
-    list-style: none;
-
+#header {
+    margin:auto;
+    width:500px;
+    font-family:Arial, Helvetica, sans-serif;
 }
 
-.nav li a {
-    background-color: #000;
-    color: #fff;
-    text-decoration: none;
-    padding: 10px 15px;
-    display: block;
-
-}
-
-.nav li a:hover{
-    background-color: #706d6d;
+ul, ol {
+    list-style:none;
 }
 
 .nav > li {
-    float: left;
+    float:left;
 }
 
-.nav li ul{
-    display: none;
+.nav li a {
+    background-color:#000;
+    color:#fff;
+    text-decoration:none;
+    padding:10px 12px;
+    display:block;
+}
+
+.nav li a:hover {
+    background-color:#434343;
+}
+
+.nav li ul {
+    display:none;
     position:absolute;
-    min-width: 140px;
+    min-width:140px;
 }
 
 .nav li:hover > ul {
     display:block;
 }
 
-.nav li ul li{
-    position: relative;
+.nav li ul li {
+    position:relative;
 }
 
-.nav li ul li ul{
-    right: -140px;
-    top: 0px;
+.nav li ul li ul {
+    right:-140px;
+    top:0px;
 }
