--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,13 @@
+body {
+    margin: 0;
+    padding: 0;
+    background: url(../img/fondo.jpg) no-repeat center top;
+    background-size: cover;
+    font-family: sans-serif;
+    height: 100vh;
+
+}
+
 * {
     margin:0px;
     padding:0px;
