--- a/css/menu.css
+++ b/css/menu.css
@@ -57,3 +57,18 @@ ul, ol {
     right:-160px;
     top:0px;
 }
+
+div#banner{
+
+    width: 100%;
+    height: 400%;
+    background: red;
+}
+
+img#img_banner{
+    display: block;
+    margin: auto;
+    width: 100;
+    max-width: 1200;
+    min-width: 500px;    
+}
