--- a/css/menu.css
+++ b/css/menu.css
@@ -69,6 +69,12 @@ img#img_banner{
     display: block;
     margin: auto;
     width: 15;
-    max-width: 20;
-    min-width: 5px;    
+      
+
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
 }
