--- a/css/menu.css
+++ b/css/menu.css
@@ -61,8 +61,8 @@ ul, ol {
 div#banner{
 
     width: 100%;
-    height: 30%;
-    background: red;
+    height: 25%;
+    background: rgba(248, 18, 152, 0.63);
 }
 
 img#img_banner{
