--- a/css/master.css
+++ b/css/master.css
@@ -11,7 +11,7 @@ body {
 .login-contenedor {
     width: 320px;
     height: 420px;
-    background: rgb(124, 123, 123);
+    background: #000;
     color: #fff;
     top: 50%;
     left: 87%;
