--- a/css/master.css
+++ b/css/master.css
@@ -11,7 +11,7 @@ body {
 .login-contenedor {
     width: 320px;
     height: 420px;
-    background: #fff;
+    background: #DAFCF7;
     color: #000;
     top: 50%;
     left: 87%;
@@ -55,11 +55,11 @@ body {
 .login-contenedor input[type="text"],
 .login-contenedor input[type="password"]{
     border: none;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #000;
     background: transparent;
     outline: none;
     height: 40px;
-    color: #fff;
+    color: #000;
     font-size: 16px;
 }
 
@@ -68,7 +68,7 @@ body {
     outline: none;
     height: 40px;
     background: #b80f22;
-    color: #fff;
+    color: #000;
     font-size: 18px;
     border-radius: 20px;
 }
@@ -81,5 +81,5 @@ body {
 }
 
 .login-contenedor a:hover {
-    color: #fff;
+    color: #000;
 }
