--- a/css/master.css
+++ b/css/master.css
@@ -11,7 +11,7 @@ body {
 .login-contenedor {
     width: 320px;
     height: 420px;
-    background: #DAFCF7;
+    background: #DAEDFC;
     color: #000;
     top: 50%;
     left: 87%;
@@ -67,7 +67,7 @@ body {
     border: none;
     outline: none;
     height: 40px;
-    background: #b80f22;
+    background: #fff;
     color: #000;
     font-size: 18px;
     border-radius: 20px;
