--- a/css/master.css
+++ b/css/master.css
@@ -11,7 +11,7 @@ body {
 .login-contenedor {
     width: 320px;
     height: 420px;
-    background: #DAEDFC;
+    background: #F5F9FD;
     color: #000;
     top: 50%;
     left: 87%;
