--- a/css/master.css
+++ b/css/master.css
@@ -67,7 +67,7 @@ body {
     border: none;
     outline: none;
     height: 40px;
-    background: #fff;
+    background: #B6DCF9;
     color: #000;
     font-size: 18px;
     border-radius: 20px;
