--- a/css/master.css
+++ b/css/master.css
@@ -67,8 +67,8 @@ body {
     border: none;
     outline: none;
     height: 40px;
-    background: #B6DCF9;
-    color: #000;
+    background: #87888A;
+    color: #fff;
     font-size: 18px;
     border-radius: 20px;
 }
