--- a/css/menu.css
+++ b/css/menu.css
@@ -62,7 +62,7 @@ div#banner{
 
     width: 100%;
     height: 25%;
-    background: rgba(247, 151, 6, 0.63);
+    background: #fff;
 }
 
 img#img_banner{
