--- a/css/menu.css
+++ b/css/menu.css
@@ -70,9 +70,23 @@ img#img_banner{
     margin: auto;
     width: 15;
       
-
     width: 200px;
     height: 200px;
     border-radius: 50%;
-   
+}
+
+
+
+#galeria .col-lg-4{
+    margin: 0 !important;
+    padding: 25px;
+}
+
+#galeria img{
+    width: 100%;
+    height: 250px;
+}
+
+#galeria img:hover{
+    border: 5px solid #f7f7f7
 }
