--- a/css/menu.css
+++ b/css/menu.css
@@ -87,7 +87,8 @@ img#img_banner{
 #galeria img{
     width: 20%;
     height: 200px;
-    justify-content:center;
+    display: flex;
+    justify-content: center;
 }
 
 #galeria img:hover{
