--- a/css/menu.css
+++ b/css/menu.css
@@ -87,8 +87,8 @@ img#img_banner{
 #galeria img{
     width: 20%;
     height: 200px;
-    display: flex;
-    justify-content: center;
+    hspace: 10px;
+    vspace: 10px;
 }
 
 #galeria img:hover{
