--- a/css/menu.css
+++ b/css/menu.css
@@ -79,7 +79,7 @@ img#img_banner{
 
 
 
-#galeria .col-lg-4{
+#galeria .col-lg-4 col-md-6 col-sm-12{
     margin: 0 !important;
     padding: 10px;
     float: center;
