--- a/css/master.css
+++ b/css/master.css
@@ -63,9 +63,10 @@ body {
     font-size: 16px;
 }
 
-.login-contenedor input[href="menu.html"]{
+.login-contenedor input[type="submit"]{
     border: none;
     outline: none;
+    text-decoration: none;
     height: 40px;
     background: #87888A;
     color: #fff;
@@ -76,7 +77,7 @@ body {
 .login-contenedor a {
     text-decoration: none;
     font-size: 12px;
-    line-height: 10px;
+    line-height: 20px;
     color: darkgrey;
 }
 
