--- a/css/menu.css
+++ b/css/menu.css
@@ -61,8 +61,14 @@ ul, ol {
 div#banner{
 
     width: 100%;
+    height: 5%;
+    background: rgb(133, 132, 132);
+}
+
+div#banner-blanco{
+    width: 100%;
     height: 25%;
-    background: #fff;
+    background: floralwhite;
 }
 
 img#img_banner{
@@ -70,8 +76,8 @@ img#img_banner{
     margin: auto;
     width: 15;
       
-    width: 200px;
-    height: 200px;
+    width: 155px;
+    height: 155px;
     border-radius: 50%;
 }
 
