--- a/css/menu.css
+++ b/css/menu.css
@@ -5,17 +5,16 @@ body {
     background-size: cover;
     font-family: sans-serif;
     height: 100vh;
-
 }
 
 * {
-    margin:0px;
-    padding:0px;
+    margin:1px;
+    padding:1px;
 }
 
 #header {
     margin:auto;
-    width:700px;
+    width:600px;
     font-family:Arial, Helvetica, sans-serif;
 }
 
@@ -61,14 +60,8 @@ ul, ol {
 div#banner{
 
     width: 100%;
-    height: 5%;
-    background: rgb(133, 132, 132);
-}
-
-div#banner-blanco{
-    width: 100%;
     height: 25%;
-    background: floralwhite;
+    background: rgb(133, 132, 132);
 }
 
 img#img_banner{
@@ -81,11 +74,7 @@ img#img_banner{
     border-radius: 50%;
 }
 
-
-
-
-
-#galeria .col-lg-4 col-md-6 col-sm-12{
+#galeria col-lg-4 col-md-6 col-sm-12{
     margin: 0 !important;
     padding: 10px;
 }
@@ -94,9 +83,11 @@ img#img_banner{
     width: 20%;
     height: 200px;
     padding: 10px;
-
+    
 }
 
 #galeria img:hover{
-    border: 7px solid #f7f7f7
+    border: 3px solid #f7f7f7
 }
+
+
