--- a/css/menu.css
+++ b/css/menu.css
@@ -4,6 +4,7 @@ body {
     background-size: cover;
     font-family: sans-serif;
     height: 100vh;
+    
 }
 
 * {
@@ -14,7 +15,7 @@ body {
 #header {
     margin:auto;
     width:600px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:Century Gothic, Helvetica, sans-serif;
 }
 
 ul, ol {
@@ -58,9 +59,25 @@ ul, ol {
 
 div#banner{
 
-    width: 100%;
-    height: 25%;
-    background: rgb(133, 132, 132);
+    width: 99.9%;
+    height: 8%;
+    background: rgb(0, 0, 0);
+}
+div#banner2{
+
+    width: 99.9%;
+    height: 2%;
+    background: #F5B7B1;
+}
+div#banner3{
+
+    width: 99.9%;
+    height: 14%;
+    background: #CACFD2 ;
+    font-family:Cabin Sketch, Helvetica, sans-serif;
+    font-size: 65px;
+    color: #34495E;
+    text-align: center;
 }
 
 img#img_banner{
@@ -88,5 +105,4 @@ img#img_banner{
 #galeria img:hover{
     border: 3px solid #353434
 }
-
 
